# apar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: Cervical Cancer.ipynb
src/apar/: __init__.py  core.py  plotting.py
tests/: test_core.py  test_diabetes_regression.py
