[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apar"
dynamic = ["version"]
description = "Applicability Area (ApAr): A decision-analytic utility-based approach to evaluating predictive models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Star Liu" },
    { name = "Shixiong Wei" },
    { name = "Harold P. Lehmann" },
]
keywords = [
    "machine-learning",
    "model-evaluation",
    "clinical-decision-making",
    "utility",
    "applicability-area",
    "ROC",
    "predictive-models",
    "medical-decision-making",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "sympy>=1.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = [
    "matplotlib>=3.5",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/StarLiu1/apar"
Documentation = "https://github.com/StarLiu1/apar#readme"
Repository = "https://github.com/StarLiu1/apar"
Issues = "https://github.com/StarLiu1/apar/issues"
Paper = "https://pubmed.ncbi.nlm.nih.gov/38222359/"

[tool.hatch.version]
path = "src/apar/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/apar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
